# space-elevator

./: .devenv.flake.nix  .gitignore  Cargo.toml  README.md  devenv.nix  flake.nix
docs/lcd-template/: LCD Template.html  lcd-template.js
docs/superpowers/plans/: 2026-05-26-freecad-first-pivot.md  2026-06-02-freecad-settings.md  2026-06-03-freecad-thin-client.md  2026-06-03-lcd-service-daemon.md
docs/superpowers/specs/: 2026-05-26-freecad-first-pivot-design.md  2026-06-02-freecad-settings-design.md  2026-06-02-lcd-service-pivot-design.md  2026-06-02-spacemouse-enterprise-button-layout-design.md
freecad-addon/: Init.py  InitGui.py  package.xml  pyproject.toml
freecad-addon/Resources/ui/: preferences.ui
freecad-addon/space_elevator/: axes.py  bindings.py  button_dialog.py  buttons.py  commands.py  enterprise_layout.json  event_pump.py  lcd_client.py  lcd_labels.py  libspnav.py  lifecycle.py  navigator.py  preferences.py  service.py  settings.py  state.py
freecad-addon/tests/: test_axes.py  test_bindings.py  test_buttons.py  test_commands.py  test_lcd_client.py  test_libspnav_open.py  test_libspnav_types.py  test_service.py  test_settings.py  test_state.py
nix/: hm-module.nix  nixos-module.nix  package.nix
space-elevator/: package.json
space-elevator/src/: App.vue
space-elevator/src-tauri/: Cargo.toml  tauri.conf.json
space-elevator/src-tauri/src/: lib.rs  main.rs
space-elevatord/: Cargo.toml
space-elevatord/examples/: send_test_state.rs  send_test_svg.rs
space-elevatord/src/: ipc.rs  lcd_handle.rs  lcd_template.rs  lib.rs  main.rs  server.rs  svg_render.rs
space-elevatord/tests/: render_pipeline.rs
spnav/: Cargo.toml
spnav-sys/: Cargo.toml  build.rs  wrapper.h
spnav-sys/examples/: test_connection.rs
spnav-sys/src/: lib.rs
spnav/examples/: button_actions.rs  config.rs  events.rs  lcd_test.rs  simple.rs  swap_yz.rs
spnav/src/: error.rs  event.rs  filter.rs  lcd.rs  lib.rs
spnav/src/config/: action.rs  axis.rs  grabmode.rs  inversion.rs  led.rs  mod.rs  sensitivity.rs
