[workspace]
resolver = "2"
members = [
    "spnav-sys",
    "spnav",
    "space-elevatord",
]

[workspace.package]
edition = "2021"
authors = ["Christopher Mühl <christopher@muehl.dev>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/padarom/space-elevator"

[workspace.dependencies]
spnav-sys = { version = "0.1", path = "spnav-sys" }
spnav = { version = "0.1", path = "spnav" }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt", "macros", "net", "io-util", "signal", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
