[package]
name = "spnav-sys"
version = "0.1.0"
edition = "2024"
authors = ["Christopher Mühl <christopher@muehl.dev>"]
description = "Raw FFI bindings to libspnav"
repository = "https://github.com/padarom/spnav-sys"
links = "spnav"

[dependencies]

[build-dependencies]
bindgen = "0.72"
pkg-config = "0.3"
